<resources>
    <string name="app_name">Vistara World</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">\nPlay</string>
    <string name="cab">\nCab</string>
    <string name="hotel">\nHotel</string>
    <string name="cv_mall">\nCV Mall</string>
    <string name="club_vistara">\nClub Vistara</string>
    <string name="welcome">Welcome To Vistara World</string>
</resources>